--- a/src/components/Supporting1/Supporting1.css
+++ b/src/components/Supporting1/Supporting1.css
@@ -152,7 +152,7 @@ p {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-left: 48px;
+    margin-left: 0px;
   }
 
   .supporting-section h1 {
